--- a/task1.html
+++ b/task1.html
@@ -5,6 +5,7 @@
     <title>Авторские украшения</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <link rel="stylesheet" href="style2.css">
@@ -64,7 +65,7 @@
             </p>
         </article>
         <article class="article3">
-           <h2> Сережки </h2>
+           <h2 class="sergi"> Сережки </h2>
             <p>
               Необыкновенно красивые и очень женственные сережки. В сережки залиты прекрасные цветы, которые подчеркнут вашу красоту и вернут в ваши будни ощущение тепла и весны. Это украшение также станет чудесным подарком для вашей любимой женщины. Ваша дама сердца будет с удовольствием одевать это украшение как на торжественные светские рауты, так и просто, при встрече с друзьями или походах в театр. <button class="custom-btn btn-8" href="#"><span>Read More</span></button>
             <h2>Кольцо</h2>
@@ -73,14 +74,14 @@
             </p>
         </article>
         <article class="article4">
-            <h3>Наш лучший мастер</h3>
+            <h3 class="info">Наш лучший мастер</h3>
             <p>
                 <img src="img2.jpg" >
-            <h3>Последняя работа</h3>
+            <h3 class="info">Последняя работа</h3>
               <img src="img1.jpg">
               <div class="widget">
                 <h3 class="widget-title">Уведомлять о новых работах</h3>
-                  <form action="">
+                  <form action="" class="email">
                   <input type="search" placeholder="Ваш email">
                   <i class="fa fa-envelope-open" aria-hidden="true"></i>
                 </form>
@@ -93,21 +94,35 @@
       <div class="footer-setcion">
       <section class="footer-item1">
 
-          <h3>Контакты</h3>
+          <h3 class="contac">Контакты</h3>
           <p class="teleph">
               +375 (29) 78 88 936 <br>
               +375 (33) 32 64 945 <br>
           </p>
       </section>
   <section class="footer-item2">
-   <h3>Мы в социальных сетях</h3>
-   <ul class="social-icons">
-    <li><a class="social-icon-twitter" href="#" title="..." target="_blank" rel="noopener"></a></li>
-    <li><a class="social-icon-fb" href="#" title="..." target="_blank" rel="noopener"></a></li>
-    <li><a class="social-icon-vk" href="#" title="..." target="_blank" rel="noopener"></a></li>
-    <li><a class="social-icon-telegram" href="#" title="..." target="_blank" rel="noopener"></a></li>
-   </ul>
-   </div>
+   <h3 class="mi">Мы в сети</h3>
+   <div class="social telegram">
+    <a href="#" target="_blank">
+      <svg role="img" viewBox="0 0 448 512">
+        <path fill="currentColor" d="M446.7 98.6l-67.6 318.8c-5.1 22.5-18.4 28.1-37.3 17.5l-103-75.9-49.7 47.8c-5.5 5.5-10.1 10.1-20.7 10.1l7.4-104.9 190.9-172.5c8.3-7.4-1.8-11.5-12.9-4.1L117.8 284 16.2 252.2c-22.1-6.9-22.5-22.1 4.6-32.7L418.2 66.4c18.4-6.9 34.5 4.1 28.5 32.2z"/>
+      </svg>
+    </a>  
+    </div>
+    <div class="social twitter">
+      <a href="#" target="_blank">
+        <svg role="img" viewBox="0 0 512 512">
+          <path fill="currentColor" d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"/>
+        </svg>
+      </a>
+    </div>
+    <div class="social youtube">
+      <a href="#" target="_blank">
+        <svg role="img" viewBox="0 0 576 512">
+          <path fill="currentColor" d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"/>
+        </svg>
+      </a>
+    </div>
   </section>
   </footer>
 </body>
